# amaz

./: .gitmodules  CMakeLists.txt  LICENSE  compile_commands.json
base/: bind.h  common.h  error-test.cc  error.cc  error.h  result-test.cc  result.h  sources.cmake  strings-test.cc  strings.h  timer-wheel.cc  timer-wheel.h  type-trait.h  utf8-test.cc  utf8.h
base/json/: basic.cc  basic.h  json-reader-test.cc  json-reader.h  json-tests.h  json-writer-test.cc  json-writer.h  pretty-formatter.h  reflection-test.cc  reflection.h  value-test.cc  value.cc  value.h
script/: build-deps.sh  use-submodules.sh
